--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@stripe/stripe-js": "^7.8.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "ckeditor5": "^42.0.0",
